--- a/src/main.css
+++ b/src/main.css
@@ -1,2 +1,38 @@
 /* include muicss */
 @import '../node_modules/muicss/dist/css/mui.min.css';
+
+input[type=range] {
+    padding-right: 1em;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+    cursor: pointer;
+    background-color: #e0e0e0;
+    height: 3px;
+}
+input[type=range]::-webkit-slider-thumb {
+    color: rgba(33, 150, 243, 1);
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+    background-color: #e0e0e0;
+}
+input[type=range]::-moz-range-track {
+    cursor: pointer;
+    background-color: #e0e0e0;
+    height: 3px;
+}
+input[type=range]::-moz-range-thumb {
+  background-color: rgba(33, 150, 243, 1);
+  border: none;
+}
+input[type=range]::-ms-track {
+    cursor: pointer;
+    background-color: #e0e0e0;
+    height: 3px;
+}
+input[type=range]::-ms-thumb {
+    color: rgba(33, 150, 243, 1);
+}
